--- a/account-payment/account_withholding/views/account_payment_view.xml
+++ b/account-payment/account_withholding/views/account_payment_view.xml
@@ -8,11 +8,18 @@
             <field name="arch" type="xml">
                 <field name='communication' position="after">
                     <div colspan="2">
-                        <group string="Withholding data" name="withholding_data" attrs="{'invisible': [('payment_method_code', '!=', 'withholding')]}">
-                            <field name="tax_withholding_id" domain="[('type_tax_use', '=', partner_type), ('company_id', '=', company_id)]" attrs="{'required': [('payment_method_code', '=', 'withholding')]}"/>
+                        <group string="Withholding data"
+                               name="withholding_data"
+                               attrs="{'invisible': [('payment_method_code', '!=', 'withholding')]}"
+                        >
+                            <field name="tax_withholding_id"
+                                   domain="[('type_tax_use', '=', partner_type), ('company_id', '=', company_id)]"
+                                   attrs="{'required': [('payment_method_code', '=', 'withholding')]}"/>
                             <field name="withholding_number" attrs="{'required': [('payment_method_code', '=', 'withholding')]}"/>
                             <field name="withholding_base_amount" attrs="{'required': [('payment_method_code', '=', 'withholding')]}"/>
-                            <field name="customerbill" attrs="{'invisible': [('payment_method_code', '!=', 'withholding'),('partner_type', '!=', 'customer')]}" domain="[('partner_id','=', partner_id),('state', '=', 'open'),('type', '=', 'out_invoice')]"/>
+                            <field name="customerbill"
+                                   domain="[('partner_id','=', partner_id),('state', '=', 'open'),('type', '=', 'out_invoice')]"
+                            />
                         </group>
                     </div>
                 </field>
